--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap')
 
 //variables
-$black: #000;
-$white: #ffffff;
-$grey: #656565;
+$black: #000
+$white: #ffffff
+$grey: #656565
 
 //resets
 *, *::after, *::before
@@ -29,13 +29,119 @@ html
     display: flex   !important
 
 // actual styling
+
 .backdrop
     display: none
     position: absolute
     width: 100%
     height: 100%
-    background: rgba(0, 0, 0, .6)
+    background: rgba(0, 0, 0, .8)
     z-index: 9999
+
+#bookArrow
+    position: fixed
+    display: grid
+    place-items: center
+    top: 50%
+    right: 0
+    transform: translateY(-50%)
+    background: $white
+    padding: 1rem .5rem
+    border-top-left-radius: 100%
+    border-bottom-left-radius: 100%
+    z-index: 9998
+    transition: padding 250ms ease-out
+    user-select: none
+    cursor: pointer
+    &:hover
+        padding: 1rem
+    p
+        font-weight: 700
+        font-size: 1.15rem
+
+#story-book
+    display: none
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    width: 80%
+    max-width: 600px
+    height: 90%
+    max-height: 520px
+    z-index: 10000
+    overflow: hidden
+    border-radius: .25rem
+    .pages
+        display: flex
+        width: 100%
+        height: 100%
+        .page
+            position: relative
+            min-width: 100%
+            min-height: 100%
+            background: $white
+            span
+                position: absolute
+                user-select: none
+                cursor: pointer
+            .right-arrow
+                top: 50%
+                right: 0
+                background: rgba(101, 101, 101, .7)
+                font-weight: 700
+                font-size: 1.15rem
+                padding: 1rem .5rem
+                transform: translateY(-50%)
+                border-top-left-radius: 100%
+                border-bottom-left-radius: 100%
+            .left-arrow
+                top: 50%
+                left: 0
+                background: rgba(101, 101, 101, .7)
+                font-weight: 700
+                font-size: 1.15rem
+                padding: 1rem .5rem
+                transform: translateY(-50%)
+                border-top-right-radius: 100%
+                border-bottom-right-radius: 100%
+            .page-content
+                display: flex
+                flex-direction: column
+                align-items: center
+                height: 100%
+                padding: 2rem
+                .page-number
+                    margin-top: auto
+                    text-align: center
+                    font-size: 1.5rem
+                    font-weight: 700
+
+
+        .page:first-of-type
+            background: url('../images/book_cover.jpg')
+            background-position: center
+            background-size: cover
+            background-repeat: no-repeat
+            .page-content
+                display: grid
+                place-items: center
+                h1
+                    font-size: 2.5rem
+                    text-align: center
+                    color: $white
+                    width: 6ch
+        .page:nth-of-type(2)
+            .page-content
+                justify-content: space-between
+                ul
+                    display: flex
+                    flex-direction: column
+                    gap: 3rem
+                    list-style: none
+                    li
+                        font-weight: 700
+                        font-size: 1.15rem
 
 header
     width: 100%
@@ -179,5 +285,3 @@ footer
             .theater
                 img
                     max-width: 400px
-
-                
