--- a/assets/styles/game.css
+++ b/assets/styles/game.css
@@ -36,7 +36,113 @@ header a {
 }
 
 main {
-  height: 900px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  padding: 4rem 0;
+}
+
+.story {
+  position: relative;
+  width: 50%;
+  max-width: 200px;
+  border: 1px solid #000;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
+}
+
+.story::after {
+  content: '';
+  display: block;
+  padding-bottom: 100%;
+}
+
+.story .story-title {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+.options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+}
+
+.options .options-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+}
+
+.options .options-row .option {
+  width: 100px;
+  height: 100px;
+  background-image: url("../images/sound.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px solid #000;
+  border-radius: .5rem;
+  cursor: pointer;
+  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+#generator-button {
+  width: 130px;
+  padding: 1rem 1.5rem;
+  background: #000;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 1.15rem;
+  cursor: pointer;
+  border: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: -webkit-transform 150ms ease-out;
+  transition: -webkit-transform 150ms ease-out;
+  transition: transform 150ms ease-out;
+  transition: transform 150ms ease-out, -webkit-transform 150ms ease-out;
+  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+  border-radius: .25rem;
+}
+
+#generator-button:focus {
+  outline: none;
+}
+
+#generator-button:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
 footer {
@@ -71,6 +177,25 @@ footer ul li:first-of-type {
 }
 
 @media screen and (min-width: 800px) {
+  body main {
+    gap: 3rem;
+  }
+  body main .story {
+    max-width: 250px;
+  }
+  body main .story .story-title {
+    font-size: 2rem;
+  }
+  body main .options {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  body main .options .options-row .option {
+    width: 125px;
+    height: 125px;
+  }
   body footer {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
