--- a/assets/styles/game.sass
+++ b/assets/styles/game.sass
@@ -28,6 +28,7 @@ body
 .display-grid
     display: grid !important    
 
+
 // actual styling
 header
     background: $black
@@ -39,7 +40,77 @@ header
         font-size: 1.25rem
 
 main
-    height: 900px
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 2rem
+    padding: 4rem 0
+
+.story
+    position: relative
+    width: 50%
+    max-width: 200px
+    border: 1px solid $black
+    user-select: none
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .5)
+    border-radius: 1rem
+    &::after
+        content: ''
+        display: block
+        padding-bottom: 100%
+    .story-title
+        display: grid
+        place-items: center
+        text-align: center
+        position: absolute
+        width: 100%
+        height: 100%
+        font-weight: 700
+        font-size: 1rem
+
+.options
+    display: flex
+    flex-direction: column
+    gap: 2rem
+    .options-row
+        display: flex
+        gap: 2rem
+        .option
+            width: 100px
+            height: 100px
+            background-image: url('../images/sound.png')
+            background-position: center
+            background-repeat: no-repeat
+            background-size: cover
+            // max-width: 100px
+            border: 1px solid $black
+            border-radius: .5rem
+            cursor: pointer
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, .5)
+            // &::after
+            //     content: ''
+            //     display: block
+            //     padding-bottom: 100%
+            // img
+            //     width: 100%
+
+#generator-button
+    width: 130px
+    padding: 1rem 1.5rem
+    background: $black
+    color: $white
+    font-weight: 700
+    font-size: 1.15rem
+    cursor: pointer
+    border: none
+    user-select: none
+    transition: transform 150ms ease-out
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, .5)
+    border-radius: .25rem
+    &:focus
+        outline: none
+    &:active
+        transform: scale(.95)
 
 footer
     display: flex
@@ -62,6 +133,18 @@ footer
 
 @media screen and ( min-width:800px )
     body
+        main
+            gap: 3rem
+            .story
+                max-width: 250px
+                .story-title
+                   font-size: 2rem
+            .options
+                flex-direction: row
+                .options-row
+                    .option
+                        width: 125px
+                        height: 125px
         footer
             flex-direction: row
             justify-content: space-evenly
