--- a/assets/styles/game.sass
+++ b/assets/styles/game.sass
@@ -130,6 +130,11 @@ footer
         list-style: none
         li:first-of-type
             font-weight: 700
+        li
+            a
+                color: $white
+                font-weight: 400
+                text-decoration: underline
 
 @media screen and ( min-width:800px )
     body
