--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -59,11 +59,7 @@ html
 
 .wave3
     .shape-fill
-            fill: pink
-        
-.wave4
-    .shape-fill
-            fill: brown
+            fill: black
 
 
     
@@ -313,14 +309,6 @@ section
     background: green
     top: -2px
 
-#section4
-    background: pink
-    top: -3px
-
-#section5
-    background: brown
-    top: -4px
-
 footer
     position: relative
     top: -5px
@@ -349,6 +337,11 @@ footer
         list-style: none
         li:first-of-type
             font-weight: 700
+        li
+            a
+                color: $white
+                font-weight: 400
+                text-decoration: underline
 
 @media screen and ( min-width:800px )
     body
