--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,7 +55,7 @@ html {
 }
 
 .wave1 .shape-fill {
-  fill: blue;
+  fill: #ffffff;
 }
 
 .wave2 {
@@ -77,7 +77,7 @@ html {
 }
 
 .wave2 .shape-fill {
-  fill: green;
+  fill: #4a072f;
 }
 
 .wave3 {
@@ -477,27 +477,51 @@ main {
 
 section {
   position: relative;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  height: 100vh;
+  padding: 2rem;
+  padding-bottom: 10rem;
   width: 100%;
-  font-size: 2rem;
   font-weight: 700;
 }
 
+section h2 {
+  font-size: 2rem;
+  text-align: center;
+  text-decoration: underline;
+}
+
+section p {
+  max-width: 700px;
+  margin: auto;
+}
+
 #section1 {
-  background: red;
+  background: #252525;
+  color: #ffffff;
 }
 
 #section2 {
-  background: blue;
+  background: #ffffff;
   top: -1px;
 }
 
 #section3 {
-  background: green;
+  background: #4a072f;
   top: -2px;
+  color: #ffffff;
+}
+
+#section3 .conclusion {
+  max-width: 700px;
+  margin: 2rem auto;
+  padding: 1rem;
+  background: #250317;
+  border-radius: 1rem;
+  -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+          box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+}
+
+#section3 .conclusion p {
+  margin: 0;
 }
 
 footer {
